@@ -304,6 +304,7 @@ New Features:
 
 - 1.5 stop bits (STOPBITS_ONE_POINT_FIVE, implemented on all platforms)
 - miniterm application extended
+- add scanlinux.py example
 
 Bugfixes:
 
